deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atomic-ticket-deployment
  labels:
    app: be-p2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: be-p2
  template:
    metadata:
      labels:
        app: be-p2
    spec:
      containers:
      - name: at-p2-container
        image: pankajkarpe1/atomic-tickets-pt:latest
        ports:
          - containerPort: 8000
