worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: pankajkarpe1/atomic-tickets-pt:ef5d6f2
          command: ["python3", "-m", "celery", "-A", "app.celeryapp", "worker", "--loglevel=info"]
